manifests/security/allow-istio.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-istio
  namespace: ecom

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system

    - ports:
        - protocol: TCP
          port: 15001

        - protocol: TCP
          port: 15006

        - protocol: TCP
          port: 15021

        - protocol: TCP
          port: 15090

  egress:
    - to:
        - podSelector: {}

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system

      ports:
        - protocol: TCP
          port: 15012

        - protocol: TCP
          port: 15017
