manifests/security/rabbitmq-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-rabbitmq
  namespace: ecom

spec:
  podSelector:
    matchLabels:
      app: rabbitmq

  policyTypes:
    - Ingress

  ingress:
    - from:

        - podSelector:
            matchLabels:
              app: order-service

        - podSelector:
            matchLabels:
              app: notification-service

      ports:
        - protocol: TCP
          port: 5672
